fix(layout): img vertical align

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -254,6 +254,7 @@ header {
 }
 
 .content-image {
+  vertical-align: middle;
   box-shadow: 0 16px 32px 0 rgba(0 0 0 / 15%);
 }
 
